--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ body {
   border: 0px solid gray;
   border-radius: 20px;
   height: 3rem;
-  width: 30rem;
+  width: 100%;
   margin: 20px;
   margin-top: 10px;
   color: #434343;
