--- a/src/components/WelcomePage/Welcome.module.css
+++ b/src/components/WelcomePage/Welcome.module.css
@@ -1,5 +1,7 @@
 .welcomePageContainer {
-    background: url('../../assets/Blob-3.png') left bottom no-repeat,
+    background: url('../../assets/Blob-1.png') left top no-repeat,
+        url('../../assets/Blob-2.png') right top no-repeat,
+        url('../../assets/Blob-3.png') left bottom no-repeat,
         url('../../assets/Blob-4.png') right bottom no-repeat;
 }
 
@@ -8,17 +10,36 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    margin: auto;
+    width: 80%;
 }
 
 .welcome {
     color: #434343;
-    font-family: Montserrat-Thin;
-    font-size: 7rem;
+    font-family: Roboto;
+    font-size: 120px;
+    font-weight: 900;
+    line-height: 191.02px;
 }
 
 .description {
     color: #434343;
-    font-family: Montserrat-Thin;
-    font-size: 4rem;
+    font-family: Roboto;
+    font-size: 35px;
+    font-weight: 100;
+}
+
+.button {
+    display: flex;
+    justify-content: space-between;
+    font-weight: 100;
+    font-size: 23px;
+    text-align: left;
+    width: 190px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: #f0c51f;
+    border-color: #f0c51f;
+    padding: 5px 20px 0px 20px;
+    margin-top: 30px;
 }
